# photo_share

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0d8ccc900b61_update_rating.py  0e447b4659f7_update_bool_level.py  144982d7e05d_fix_bug_tag.py  144a96c47d22_add_json_columns.py  1afcf54cc3e8_init.py  22831226ed28_.py  2d6d011af6a1_comment_models.py  2f5298117080_.py  3222bc834d8c_fix_rating_data.py  322f65051d41_add_picture_name_to_table_picture.py  48954fab42a1_picture_and_user_update.py  4ad69ce83cef_init.py  52c6c098d9ba_fix_bug_massage.py  55b72fdb8d3b_update_picture.py  5a67903a7d53_qr_codes.py  66644f64f124_add_reset_token.py  6728932871fb_increase_the_length_of_the_refresh_.py  776668b5f95b_reactions_fix.py  77ae5d54f233_remove_reset_token.py  86beb3801306_add_rating_base.py  93b70987baf6_added_on_delete_cascade_to_some_tables.py  95e0c61f68c9_reactions_change_jsonb_to_json.py  9823fc072f4f_fix_picture_model.py  a20921d0fee1_fix_double_rating.py  a61fdcc332d0_reactions_fix2.py  b4fc1efc84ef_pictures_with_description.py  c2082ca6ef35_pictures_upgrade.py  d317795e5806_start.py  (+9 more)
src/: schemas.py  secrets_manager.py
static/: styles.css
templates/: base.html  comment_edit.html  home.html  index.html  layout.html  login.html  navbar.html  picture.html  picture_edit.html  picture_upload.html  pictures.html  ratings.html  register.html  resetPassword.js  reset_password.html  user_details.html  users.html
tests/: conftest.py  test.db  test_routes_auth.py
(+76 files in other folders)
